tests/snapshots/integration__integration_tests__push__push_dirty_target.snap
---
source: tests/integration_tests/push.rs
info:
  program: wt
  args:
    - push
    - main
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: [TEST_CONFIG]
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
❌ [31mCannot push: conflicting uncommitted changes in:[0m

[2m•[0m conflict.txt

💡 [2mCommit or stash these changes in [REPO] first[0m
