tests/snapshots/integration__integration_tests__push__push_error_not_fast_forward.snap
---
source: tests/integration_tests/push.rs
info:
  program: wt
  args:
    - push
    - main
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: [TEST_CONFIG]
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
❌ [31mNot a fast-forward from [1m[31mmain[0m to HEAD[0m

💡 [2mThe target branch has commits not in your current branch[0m
💡 [2mConsider: git pull or git rebase[0m
